--- a/index.html
+++ b/index.html
@@ -9,9 +9,29 @@
 </head>
 
 <body>
-    <h1>Welcome to the AI poems generator</h1>
+    <header>
+        <h1>AI poems generator</h1>
+    </header>
 
+    <main>
+        <form>
+            <input type="text" placeholder="Enter the topic of the poem" autofocus required />
+            <input type="submit" />
+        </form>
+        <div>
+            Poem...
+        </div>
 
+    </main>
+
+    <footer>
+        This project was coded by
+        <a href="https://github.com/Karabo-L"> Karabo Lesapo</a>
+        and is
+        <a href="https://github.com/Karabo-L/poem-generator" target="_blank">
+            open-sourced on GitHub
+        </a> and is hosted on <a href="word-ai-poem-generator.netlify.app">Netlify</a>
+    </footer>
     <script src="src/index.js"></script>
 </body>
 
