added styling to the project

--- a/index.html
+++ b/index.html
@@ -9,30 +9,33 @@
 </head>
 
 <body>
-    <header>
-        <h1>AI poems generator</h1>
-    </header>
+    <div class="container">
+        <header>
+            <h1>AI poems generator</h1>
+        </header>
 
-    <main>
-        <form>
-            <input type="text" placeholder="Enter the topic of the poem" autofocus required />
-            <input type="submit" />
-        </form>
-        <div>
-            Poem...
-        </div>
+        <main>
+            <form>
+                <input type="text" placeholder="Enter the topic of the poem" autofocus required class="intext" />
+                <input type="submit" class="btn" />
+            </form>
+            <div class="poem">
+                Poem...
+            </div>
 
-    </main>
+        </main>
 
-    <footer>
-        This project was coded by
-        <a href="https://github.com/Karabo-L"> Karabo Lesapo</a>
-        and is
-        <a href="https://github.com/Karabo-L/poem-generator" target="_blank">
-            open-sourced on GitHub
-        </a> and is hosted on <a href="word-ai-poem-generator.netlify.app">Netlify</a>
-    </footer>
+        <footer>
+            This project was coded by
+            <a href="https://github.com/Karabo-L"> Karabo Lesapo</a>
+            and is
+            <a href="https://github.com/Karabo-L/poem-generator" target="_blank">
+                open-sourced on GitHub
+            </a> and is hosted on <a href="word-ai-poem-generator.netlify.app">Netlify</a>
+        </footer>
+    </div>
     <script src="src/index.js"></script>
+
 </body>
 
 </html>
