Added basic form handling and added typewritter plugin

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link rel="stylesheet" href="src/styles.css">
     <title>Poem generator</title>
 </head>
@@ -15,11 +16,11 @@
         </header>
 
         <main>
-            <form>
+            <form id="poem-gen">
                 <input type="text" placeholder="Enter the topic of the poem" autofocus required class="intext" />
                 <input type="submit" class="btn" />
             </form>
-            <div class="poem">
+            <div class="poem" id="poem">
                 Poem...
             </div>
 
