--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/styles.css">
     <title>Poem generator</title>
 </head>
@@ -17,7 +18,8 @@
 
         <main>
             <form id="poem-gen">
-                <input type="text" placeholder="Enter the topic of the poem" autofocus required class="intext" />
+                <input type="text" placeholder="Enter the topic of the poem" autofocus required class="intext"
+                    id="intext" />
                 <input type="submit" class="btn" />
             </form>
             <div class="poem" id="poem">
